runFormatTest(import.meta, ["html"]);
runFormatTest(import.meta, ["html"], { singleQuote: true });
